<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/nameEd"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawableStart="@drawable/person_add_24"
        android:inputType="textPersonName"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="95dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toTopOf="parent"
        >

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phoneEd"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawableStart="@drawable/phone_24"
        android:inputType="phone"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@+id/nameEd">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEd"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:inputType="textEmailAddress"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@+id/phoneEd">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userIdEd"
        android:hint="@string/userName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:inputType="text"
        android:drawableStart="@drawable/person_add_24"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@+id/emailEd">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEd"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:inputType="numberPassword"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@+id/userIdEd">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/repeatPasswordEd"
        android:hint="@string/rePassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:drawableStart="@drawable/ic_baseline_check_circle_24"
        android:inputType="numberPassword"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@+id/passwordEd">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/urlEd"
        android:hint="@string/url"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:inputType="textUri"
        android:drawableStart="@drawable/ic_baseline_cloud_done_24"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edittext"
        app:layout_constraintTop_toBottomOf="@+id/repeatPasswordEd">

    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RegisterBt"
        app:layout_constraintTop_toBottomOf="@+id/urlEd"
        android:text="@string/register"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:layout_marginTop="25dp"
        android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="180dp"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>