<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#eeeeee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent=".35"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

</androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVer"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVert"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCard"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </androidx.constraintlayout.widget.Guideline>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons"
        android:background="#3F51B5"
        app:layout_constraintBottom_toTopOf="@id/guidelineVert"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <androidx.appcompat.widget.AppCompatImageView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/userlogin"
            android:layout_width="150dp"
            android:layout_height="100dp">

        </androidx.appcompat.widget.AppCompatImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toBottomOf="@+id/guidelineCard"
        android:background="@color/white"
        android:layout_height="310dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rearrenge"
            android:layout_width="match_parent"
            android:layout_height="310dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userNameEd"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="60dp"
                android:paddingLeft="5dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/userName"
                app:layout_constraintTop_toTopOf="@id/rearrenge"
                >

            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEd"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:paddingLeft="5dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edittext"
                app:layout_constraintTop_toBottomOf="@+id/userNameEd">

            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginBt"
                app:layout_constraintTop_toBottomOf="@+id/passwordEd"
                android:text="@string/login"
                android:textSize="25sp"
                android:textAllCaps="false"
                android:background="@drawable/button"
                android:layout_marginTop="25dp"
                android:layout_marginStart="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="180dp"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/registerTx"
                android:text="@string/noAccount"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginBt">

            </androidx.appcompat.widget.AppCompatTextView>


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>